syntax = "proto3";

option go_package = "api/currency";

package api;

service Check {
    rpc AddUrl (AddRequestUrl) returns (AddResponseUrl){}
    rpc GetStatusUrl (RequestInfoByCheckUrl) returns (ResponseInfoByCheckUrl){}
    rpc DeleteUrl (RequestUrlDelete) returns (ResponseUrlDelete){}
}

message AddRequestUrl{
    string strUrl = 1;
    int32 countPointCheckUrl = 2;
}
message AddResponseUrl{
    string result = 1;
}

message RequestInfoByCheckUrl{
    string strUrl = 1;
}

message ResponseInfoByCheckUrl{
    repeated Container containers = 1;
}
message Container {
    string timeCheckUrl = 1;
    int32 statusUrl = 2;
}
message RequestUrlDelete{
    string strUrl = 1;
}

message ResponseUrlDelete{
    string strUrl = 1;
}